# tools

./: .gitignore  LICENSE  README.md
MRI/: .gitignore  README.txt  extract_mag_and_velocity_from_dicom  nondicom_writer
MRI/MatlabScripts/: README.txt  extract_4dmri_data_and_save_to_file.m  extract_relevant_dicom_metadata.m  extract_speed_and_suffix_from_sequence_name.m  write_3d_to_file.m  write_4d_to_file.m  write_intensity_data_to_file.m  write_phase_data_to_file.m
MRI/generate_voxel_centered_query_points/: generate_voxel_centered_query_points.cpp
MRI/nondicom_4dmri/: CMakeCache.txt  Makefile  cmake_install.cmake
MRI/nondicom_reader/: CMakeLists.txt  foo.mmo  main.cpp
MRI/nondicom_reader/include/: read_nondicom.h
MRI/nondicom_reader/source/: main.cpp  read_nondicom.cpp
MRI/nondicom_thresholder/: .gitignore  CMakeLists.txt  main.cpp
MRI/slicer/: CMakeLists.txt
MRI/slicer/source/: slicer.cpp
MRI/to_be_deleted/nondicom_4dmri/: nondicom_4dmri
MRI/to_be_deleted/voxel_model_registration/: CMakeLists.txt
MRI/voxel_model_registration/: .gitignore
MRI/voxel_model_registration/source/: voxel_model_registration.cpp
affinities/: CMakeLists.txt
affinities/include/: affinity.h  affinity.hpp
bash_scripts/: check_for_directory  check_for_file
common/: CMakeLists.txt
common/include/: common_defs.h  common_defs.hpp
conics/: CMakeLists.txt
core_tools/: CMakeLists.txt  hello.cpp
core_tools/affinities/: CMakeLists.txt
core_tools/affinities/include/: affinity.h  affinity.hpp
core_tools/common/: CMakeLists.txt
core_tools/common/include/: common_defs.h
core_tools/conics/: CMakeLists.txt
core_tools/conics/include/: conic.h
core_tools/conics/source/: conic.cpp
core_tools/disjoint_unions/: CMakeLists.txt
core_tools/misc/: CMakeLists.txt
core_tools/misc/include/: misc.h  misc.hpp
core_tools/misc/source/: for_charles.cpp  misc.cpp
core_tools/misc_math/: CMakeLists.txt
core_tools/misc_math/include/: misc_math.h  misc_math.hpp
core_tools/misc_math/source/: misc_math.cpp
core_tools/polylines/: CMakeLists.txt
core_tools/polylines/include/: polyline.h
core_tools/polylines/source/: polyline.cpp
core_tools/quadrics/: .gitignore  CMakeLists.txt
core_tools/triangulations/: CMakeLists.txt
core_tools/triangulations/include/: triangulation.h
core_tools/triangulations/source/: triangulation.cpp
core_tools/voxels/: CMakeLists.txt
core_tools/voxels/include/: indexer.h  indexer.hpp  voxel_box.h  voxel_box.hpp
core_tools/voxels/source/: voxel_box.cpp
disjoint_unions/: CMakeLists.txt
disjoint_unions/include/: disjoint_union.h
disjoint_unions/source/: disjoint_union.cpp
misc/: CMakeLists.txt
misc/include/: misc.h  misc.hpp
misc/source/: .gitignore
misc_math/: CMakeLists.txt
misc_math/include/: misc_math.h  misc_math.hpp
polylines/: CMakeLists.txt
polylines/source/: polyline.cpp
quadrics/: CMakeLists.txt
quadrics/include/: quadric.h
quadrics/source/: quadric.cpp
triangulations/: CMakeLists.txt
triangulations/source/: triangulation.cpp
voxels/include/: voxel_box.h  voxel_model.h  voxel_model.hpp
