cmake_minimum_required(VERSION 3.16)
set (CMAKE_CXX_STANDARD 17)

project(dans_utils)

set(CMAKE_BUILD_TYPE Debug)
#set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wunused") 

INCLUDE_DIRECTORIES("/home/dan/git-repos/eigen-3.4.0")

set(dans_tools_dir "/home/dan/git-repos/AAOCA-workflow-tools/dans_tools/")

add_subdirectory(${dans_tools_dir}common ${dans_tools_dir}build/common)
add_subdirectory(${dans_tools_dir}misc ${dans_tools_dir}build/misc)
add_subdirectory(${dans_tools_dir}misc_math ${dans_tools_dir}build/misc_math)
add_subdirectory(${dans_tools_dir}voxels ${dans_tools_dir}build/voxels)
add_subdirectory(${dans_tools_dir}affinities ${dans_tools_dir}build/affinities)
add_subdirectory(${dans_tools_dir}polylines ${dans_tools_dir}build/polylines)

add_library(helper /home/dan/git-repos/MRI-tools/dans_tools/map_masked_velocity_to_vtk/source/helper.cpp)
target_include_directories(helper PRIVATE /home/dan/git-repos/MRI-tools/dans_tools/map_masked_velocity_to_vtk/include/)
target_include_directories(helper PUBLIC ${dans_tools_dir}misc/include/)
target_include_directories(helper PUBLIC ${dans_tools_dir}misc_math/include/)
target_include_directories(helper PUBLIC ${dans_tools_dir}affinities/include/)
target_link_libraries(helper misc)
target_link_libraries(helper misc_math)
target_link_libraries(helper affinities)

add_executable(slicer source/slicer.cpp)
target_include_directories(slicer PRIVATE include/)
target_include_directories(slicer PRIVATE /home/dan/git-repos/MRI-tools/dans_tools/map_masked_velocity_to_vtk/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}common/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}misc/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}misc_math/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}voxels/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}affinities/include/)
target_include_directories(slicer PUBLIC ${dans_tools_dir}polylines/include/)
target_link_libraries(slicer helper)
target_link_libraries(slicer misc)
target_link_libraries(slicer misc_math)
target_link_libraries(slicer affinities)
target_link_libraries(slicer polylines)
